lustre/include/obd.h
@@ -215,6 +215,9 @@ struct client_obd {
 	 */
 	__u32			 cl_dom_min_inline_repsize;
 
+	unsigned int		 cl_checksum:1, /* 0 = disabled, 1 = enabled */
+				 cl_checksum_dump:1, /* same */
+				 cl_ocd_grant_param:1;
 	enum lustre_sec_part	 cl_sp_me;
 	enum lustre_sec_part	 cl_sp_to;
 	struct sptlrpc_flavor	 cl_flvr_mgc; /* fixed flavor of mgc->mgs */
@@ -342,9 +345,6 @@ struct client_obd {
 	struct list_head	 cl_flight_waiters;
 	__u32			 cl_rpcs_in_flight;
 
-        /* checksumming for data sent over the network */
-	unsigned int		 cl_checksum:1, /* 0 = disabled, 1 = enabled */
-				 cl_checksum_dump:1; /* same */
         /* supported checksum types that are worked out at connect time */
         __u32                    cl_supp_cksum_types;
         /* checksum algorithm to be used */
